# desmos

./: .gitignore  BRANDING.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION.md  PROMPT.md  README.md  SPECIFICATION.md  TASKS.md  deny.toml  prd.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  openwrt.yml  release.yml  security.yml
config/: desmos.toml.example
crates/desmos/: Cargo.toml
crates/desmos-cli/: Cargo.toml
crates/desmos-cli/src/: dispatch.rs  errors.rs  ipc_client.rs  lib.rs  output.rs  parser.rs
crates/desmos-cli/src/commands/: clients.rs  interfaces.rs  mod.rs  stats.rs  up.rs
crates/desmos-core/: Cargo.toml
crates/desmos-core/benches/: bonding.rs  reorder.rs
crates/desmos-core/src/: broadcast.rs  daemon.rs  errors.rs  lib.rs
crates/desmos-core/src/auth/: asn1.rs  crl.rs  mod.rs  mtls.rs  psk.rs  pubkey.rs  totp.rs  x509.rs
crates/desmos-core/src/bonding/: failover.rs  link.rs  link_state.rs  mod.rs  probe.rs  reorder.rs  score.rs  strategy.rs
crates/desmos-core/src/config/: diff.rs  lexer.rs  mod.rs  schema.rs  validate.rs
crates/desmos-core/src/daemon/: client.rs  handshake.rs  ipc.rs  mod.rs  runner.rs  server_loop.rs
crates/desmos-core/src/log/: broadcast_sink.rs  mod.rs  redact.rs  ring.rs  sink.rs
crates/desmos-core/src/net/: dns.rs  iface.rs  mod.rs  pmtud.rs  resolver_hook.rs  stun.rs  watcher.rs
crates/desmos-core/src/p2p/: holepunch.rs  mod.rs  relay.rs
crates/desmos-core/src/pipeline/: inbound.rs  metrics.rs  mod.rs  outbound.rs
crates/desmos-core/src/server/: clients.rs  mod.rs  nat.rs  ratelimit.rs
crates/desmos-core/src/session/: keepalive.rs  manager.rs  mod.rs  rekey.rs
crates/desmos-core/tests/: encrypted_loopback.rs  failover_e2e.rs  link_state.rs  mtls_auth.rs  plaintext_pipeline.rs  pmtud_fragment.rs  probe_and_score.rs  redundant_bonding.rs  reorder.rs  rr_bonding.rs  server_accept.rs  toml_roundtrip.rs
crates/desmos-http/: Cargo.toml
crates/desmos-proto/: Cargo.toml
crates/desmos-proto/benches/: crypto.rs  wire.rs
crates/desmos-proto/src/: antireplay.rs  errors.rs  flags.rs  fragment.rs  lib.rs  packet.rs  types.rs  wire.rs
crates/desmos-proto/src/crypto/: aead.rs  hash.rs  hkdf.rs  mod.rs  verify.rs  x25519.rs  x25519_field.rs
crates/desmos-proto/src/handshake/: cookie.rs  mod.rs  noise.rs
crates/desmos-proto/tests/: aead_roundtrip.rs  antireplay.rs  noise_ik.rs  wire_roundtrip.rs
crates/desmos-rt/: Cargo.toml
crates/desmos-rt/src/: event.rs  lib.rs  pool.rs  reactor.rs  ring.rs  signal.rs  socket.rs  timer.rs  tun.rs
crates/desmos-rt/src/bsd/: bind_device.rs  freebsd_tun.rs  macos_tun.rs  mod.rs  reactor.rs
crates/desmos-rt/src/linux/: bind_device.rs  mod.rs  reactor.rs  tun.rs
crates/desmos-rt/src/priv_drop/: freebsd.rs  linux.rs  macos.rs  mod.rs
crates/desmos-rt/src/windows/: mod.rs  reactor.rs  tun.rs
crates/desmos-rt/tests/: pool_hitrate.rs  reactor_epoll.rs  ring_spsc.rs  timer_wheel_bench.rs  tun_linux.rs
crates/desmos-webui/: Cargo.toml  build.rs
crates/desmos-webui/src/: auth.rs  dto.rs  embed.rs  lib.rs  prometheus.rs  routes.rs  ws_loop.rs
crates/desmos-webui/src/handlers/: bonding.rs  clients.rs  config.rs  health.rs  interfaces.rs  logs.rs  mod.rs  stats.rs  status.rs  version.rs  ws.rs
crates/desmos-webui/web/: index.html  package-lock.json  package.json  vite.config.ts
crates/desmos-webui/web/src/: api.ts  app.tsx  main.tsx
crates/desmos-webui/web/src/components/: InterfaceTable.tsx  LogStream.tsx  StrategyDropdown.tsx  ThroughputChart.tsx  TomlEditor.tsx  TunnelStatusBadge.tsx  WeightSlider.tsx
crates/desmos-webui/web/src/hooks/: useFetch.ts  useWsStream.ts
crates/desmos-webui/web/src/pages/: Bonding.tsx  Connections.tsx  Dashboard.tsx  Interfaces.tsx  Logs.tsx  Settings.tsx
crates/desmos-webui/web/src/styles/: global.css  tokens.css
docs/: architecture.md  cli.md  getting-started.md  protocol.md  webui.md
docs/adr/: 0001-workspace-layout.md  0002-hand-rolled-runtime.md  (+2 more)
scripts/: build-openwrt.sh  install.ps1  install.sh  release.sh  rr_bonding_veth.sh  smoke-test.sh
(+40 files in other folders)
