[package]
name = "desmos-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Desmos domain logic: bonding, session, config, logger, server, p2p, auth."

[dependencies]
desmos-proto = { path = "../desmos-proto" }
desmos-rt = { path = "../desmos-rt" }

[dev-dependencies]
ring = { workspace = true }
