[package]
name = "desmos-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Desmos wire protocol, crypto primitives, and handshake state machine (I/O-free)."

[dependencies]
ring = { workspace = true }
blake3 = { workspace = true }

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "wire"
harness = false
