[package]
name = "desmos-rt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Desmos hand-rolled async runtime: reactor, TUN, sockets, timer, ring buffer."

[dependencies]
desmos-proto = { path = "../desmos-proto" }
socket2 = { workspace = true, features = ["all"] }
