[package]
name = "desmos-webui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Desmos REST API handlers and embedded React SPA."

[dependencies]
desmos-http = { path = "../desmos-http" }
