[package]
name = "desmos-webui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Desmos REST API handlers and embedded React SPA."

[features]
default = ["embed-frontend"]
embed-frontend = []

[dependencies]
desmos-core = { path = "../desmos-core" }
desmos-http = { path = "../desmos-http" }
